--- a/main_file.tex
+++ b/main_file.tex
@@ -286,11 +286,7 @@ Moreover, we use the exact model and parameters from data generating process to 
 \end{enumerate}
 We expect to see the performance of both the proposed method and benchmark methods converge to this upper bound when data length increases, and we also investigate the differences of their performance when data is insufficient.
 
-\subsection{Simulation results}
-
-
-
-In Figure, DGP denotes the exact ARIMA model from data generating process as out upper bound, DJ denotes the benchmark disjoint method, QR denotes the quantile regression method, and CF denotes our proposed method. We can see both the proposed method and the quantile regression method outperform the disjoint method. Besides, a clear trend of convergence between QR and CF can be seen when data length grows. This is exactly what we expected base on the transformation property we proved in Section \ref{se:new}. Moreover, the performance of our proposed method keep moving toward the upper-bound as data length grows, which is due to the approximation of profit function we used in our method approaching the real expected profit function as data length grows. Overall, the proposed method generated an acceptable performance in the metric of percentage profit loss.
+The results are presented in following tables and figures. In Figure, DGP denotes the exact ARIMA model from data generating process as out upper bound, DJ denotes the disjoint method, QR denotes the quantile regression method, and CF denotes our proposed method. This figure represents the performance of methods regarding to percentage profit loss in the situation where the target service level $=0.5$. We can see both the proposed method and the benchmark methods converge to the upper bound when data length grows. Besides, the performance of our proposed method and quantile regression is very similar. This is exactly what we expected base on the transformation property we proved in Section \ref{se:new}. When the data size is small, the  
 
 
 
