--- a/main_file.tex
+++ b/main_file.tex
@@ -16,7 +16,7 @@
 \usepackage{booktabs}
 \usepackage{multirow}
 \usepackage{graphicx}
-
+\graphicspath{ {./images/} }
 
 \title{Newsvendor Problems: A New Way to Integrated Forecasting and Optimisation}
 
@@ -285,8 +285,13 @@ Moreover, we use the exact model and parameters from data generating process to 
     \item Fill Rate ($MFR=\frac{\min\{\hat{Q}_{s+1},y_{s+1}\}}{y_{s+1}}$).
 \end{enumerate}
 We expect to see the performance of both the proposed method and benchmark methods converge to this upper bound when data length increases, and we also investigate the differences of their performance when data is insufficient.
-
-The results are presented in following tables and figures. In Figure, DGP denotes the exact ARIMA model from data generating process as out upper bound, DJ denotes the disjoint method, QR denotes the quantile regression method, and CF denotes our proposed method. This figure represents the performance of methods regarding to percentage profit loss in the situation where the target service level $=0.5$. We can see both the proposed method and the benchmark methods converge to the upper bound when data length grows. Besides, the performance of our proposed method and quantile regression is very similar. This is exactly what we expected base on the transformation property we proved in Section \ref{se:new}. When the data size is small, the  
+\begin{figure}[h]
+\includegraphics[width=0.6\textwidth]{ppl0.5-1.pdf}
+\caption{Percentage profit loss vs. data size at 0.5 target service level}
+\centering
+\label{fig:ppl0.5}
+\end{figure}
+The results are presented in tables and figures. In Figure \ref{fig:ppl0.5}, DGP denotes the exact ARIMA model from data generating process as out upper bound, DJ denotes the disjoint method, QR denotes the quantile regression method, and CF denotes our proposed method. This figure represents the performance of methods regarding to percentage profit loss in the situation where the target service level $=0.5$. We can see both the proposed method and the benchmark methods converge to the upper bound when data length grows. Besides, the performance of our proposed method and quantile regression is very similar. This is exactly what we expected base on the transformation property we proved in Section \ref{se:new}. When the data size is small, the  
 
 
 
