--- a/main_file.tex
+++ b/main_file.tex
@@ -16,6 +16,7 @@
 \usepackage{booktabs}
 \usepackage{multirow}
 \usepackage{graphicx}
+\setkeys{Gin}{width=.7\textwidth}
 \graphicspath{ {./images/} }
 
 \title{Newsvendor Problems: A New Way to Integrated Forecasting and Optimisation}
@@ -286,13 +287,19 @@ Moreover, we use the exact model and parameters from data generating process to 
 \end{enumerate}
 We expect to see the performance of both the proposed method and benchmark methods converge to this upper bound when data length increases, and we also investigate the differences of their performance when data is insufficient.
 \begin{figure}[h]
-\includegraphics[width=0.6\textwidth]{ppl0.5-1.pdf}
-\caption{Percentage profit loss vs. data size at 0.5 target service level}
 \centering
+\includegraphics{ppl0.5-1.pdf}
+\caption{Percentage profit loss vs. data size at 0.5 target service level}
 \label{fig:ppl0.5}
 \end{figure}
-The results are presented in tables and figures. In Figure \ref{fig:ppl0.5}, DGP denotes the exact ARIMA model from data generating process as out upper bound, DJ denotes the disjoint method, QR denotes the quantile regression method, and CF denotes our proposed method. This figure represents the performance of methods regarding to percentage profit loss in the situation where the target service level $=0.5$. We can see both the proposed method and the benchmark methods converge to the upper bound when data length grows. Besides, the performance of our proposed method and quantile regression is very similar. This is exactly what we expected base on the transformation property we proved in Section \ref{se:new}. When the data size is small, the  
 
+The results are presented in tables and figures. In Figure \ref{fig:ppl0.5}, DGP denotes the exact ARIMA model from data generating process as out upper bound, DJ denotes the disjoint method, QR denotes the quantile regression method, and CF denotes our proposed method. This figure represents the performance of methods regarding to percentage profit loss in the situation where the target service level $=0.5$. We can see both the proposed method and the benchmark methods converge to the upper bound when data length grows. Besides, the performance of our proposed method and quantile regression is very similar. This is exactly what we expected base on the transformation property we proved in Section \ref{se:new}. Besides, when the data size is small, the disjoint method can capture the structure faster than quantile regression method, which is also slightly faster than the proposed method. In figure \ref{fig:sl0.5}, however, the disjoint method performed poorly when the data size is small. More details about the mean and variance of the size effect can be seen in Table
+\begin{figure}[h]
+\centering
+\includegraphics{sl-1.pdf}
+\caption{Service level vs. data size at 0.5 target service level}
+\label{fig:sl0.5}
+\end{figure}
 
 
 Figure is the beanplot of absolute inventory error with data length equal to 480. We choose this particular data length since all methods are stabled when length equal or bigger than it as we can see from Figure. Actually, the plot looks similar in other data lengths, but we don't show them all in line. We can see all methods perform similarly on the metric of absolute inventory error either in mean value or distribution shape. 
