--- a/linear norm plot.Rmd
+++ b/linear norm plot.Rmd
@@ -47,9 +47,10 @@ plot.new()
 l <- legend(0, 0, bty='n',c("DGP", "DJ","QR","CF"),plot=FALSE, pch=1:4,col=1:4)
 w <- grconvertX(l$rect$w, to='ndc') - grconvertX(0, to='ndc')
 par(omd=c(0, 1-w, 0, 1))
-matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n"
+matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",yaxt = "n"
         ,xlab = 'data length',ylab = 'percetage profit loss') 
 axis(1, at=1:5, labels=x_axis)
+axis(2, at=pretty(y_axis), lab=paste0(pretty(y_axis) * 100, "%"), las=TRUE)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
        ,c("DGP", "DJ","QR","CF"), pch=1:4,col=1:4)
 
@@ -77,9 +78,10 @@ plot.new()
 l <- legend(0, 0, bty='n',c("DGP", "DJ","QR","CF"),plot=FALSE, pch=1:4,col=1:4)
 w <- grconvertX(l$rect$w, to='ndc') - grconvertX(0, to='ndc')
 par(omd=c(0, 1-w, 0, 1))
-matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n"
+matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",yaxt = "n"
         ,xlab = 'data length',ylab = 'percetage profit loss') 
 axis(1, at=1:5, labels=x_axis)
+axis(2, at=pretty(y_axis), lab=paste0(pretty(y_axis) * 100, "%"), las=TRUE)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
        ,c("DGP", "DJ","QR","CF"), pch=1:4,col=1:4)
 
@@ -107,9 +109,10 @@ plot.new()
 l <- legend(0, 0, bty='n',c("DGP", "DJ","QR","CF"),plot=FALSE, pch=1:4,col=1:4)
 w <- grconvertX(l$rect$w, to='ndc') - grconvertX(0, to='ndc')
 par(omd=c(0, 1-w, 0, 1))
-matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n"
+matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",yaxt = "n"
         ,xlab = 'data length',ylab = 'percetage profit loss') 
 axis(1, at=1:5, labels=x_axis)
+axis(2, at=pretty(y_axis), lab=paste0(pretty(y_axis) * 100, "%"), las=TRUE)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
        ,c("DGP", "DJ","QR","CF"), pch=1:4,col=1:4)
 
@@ -212,7 +215,7 @@ matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",xlab = 'data length'
         ,ylab = 'service level')
 axis(1, at=1:5, labels=x_axis)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
-       ,c("Upper-bound", "DJ","QR","CF"), pch=1:4,col=1:4)
+       ,c("DGP", "DJ","QR","CF"), pch=1:4,col=1:4)
 
 y_40<-c(Reduce("+",re_40_p_l[[5]])[3]/iter,Reduce("+",re_40_p_l[[6]])[3]/iter
         ,Reduce("+",re_40_p_l[[7]])[3]/iter,Reduce("+",re_40_p_l[[8]])[3]/iter)
@@ -234,7 +237,7 @@ matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",xlab = 'data length'
         ,ylab = 'service level')
 axis(1, at=1:5, labels=x_axis)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
-       ,c("Upper-bound", "DJ","QR","CF"), pch=1:4,col=1:4)
+       ,c("DGP", "DJ","QR","CF"), pch=1:4,col=1:4)
 
 y_40<-c(Reduce("+",re_40_p_l[[9]])[3]/iter,Reduce("+",re_40_p_l[[10]])[3]/iter
         ,Reduce("+",re_40_p_l[[11]])[3]/iter,Reduce("+",re_40_p_l[[12]])[3]/iter)
@@ -256,7 +259,7 @@ matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",xlab = 'data length'
         ,ylab = 'service level')
 axis(1, at=1:5, labels=x_axis)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
-       ,c("Upper-bound", "DJ","QR","CF"), pch=1:4,col=1:4)
+       ,c("DGP", "DJ","QR","CF"), pch=1:4,col=1:4)
 ```
 
 ```{r Wilcoxon}
