--- a/main_file.tex
+++ b/main_file.tex
@@ -301,9 +301,8 @@ The results are presented in tables and figures. In Figure \ref{fig:ppl0.5}, DGP
 \label{fig:sl0.5}
 \end{figure}
 
-\textbackslash begin\{table\}
-
-\textbackslash caption\{\label{tab:size0.5}Size effect (q=50\%)\}
+\begin{table}
+\caption{Size effect on percentage profit loss and service level at 0.5 target service level}
 \centering \resizebox{\linewidth}{!}{
 \begin{tabular}[t]{ccccccccc}
 \toprule
@@ -311,13 +310,14 @@ The results are presented in tables and figures. In Figure \ref{fig:ppl0.5}, DGP
 \cmidrule(l{3pt}r{3pt}){2-5} \cmidrule(l{3pt}r{3pt}){6-9}
 Data size & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed\\
 \midrule
-\rowcolor{gray!6}  40 & 4.91\% & 5.35\% & 5.67\% & 5.51\% & 50.24\% & 44.29\% & 50.23\% & 50.50\%\\
+40 & 4.91\% & 5.35\% & 5.67\% & 5.51\% & 50.24\% & 44.29\% & 50.23\% & 50.50\%\\
 120 & 4.94\% & 5.15\% & 5.20\% & 5.15\% & 49.25\% & 46.99\% & 49.21\% & 49.50\%\\
-\rowcolor{gray!6}  480 & 4.94\% & 5.05\% & 5.05\% & 5.04\% & 49.84\% & 49.21\% & 49.79\% & 49.78\%\\
+480 & 4.94\% & 5.05\% & 5.05\% & 5.04\% & 49.84\% & 49.21\% & 49.79\% & 49.78\%\\
 1200 & 4.92\% & 5.00\% & 4.99\% & 4.99\% & 50.33\% & 49.88\% & 50.24\% & 50.24\%\\
-\rowcolor{gray!6}  4800 & 4.92\% & 4.92\% & 4.96\% & 4.96\% & 49.22\% & 49.21\% & 49.30\% & 49.40\%\\
+4800 & 4.92\% & 4.92\% & 4.96\% & 4.96\% & 49.22\% & 49.21\% & 49.30\% & 49.40\%\\
 \bottomrule
-\end{tabular}} \textbackslash end\{table\}
+\end{tabular}} 
+\end{table}
 
 Figure is the beanplot of absolute inventory error with data length equal to 480. We choose this particular data length since all methods are stabled when length equal or bigger than it as we can see from Figure. Actually, the plot looks similar in other data lengths, but we don't show them all in line. We can see all methods perform similarly on the metric of absolute inventory error either in mean value or distribution shape. 
 
