change on table

--- a/linear norm plot.Rmd
+++ b/linear norm plot.Rmd
@@ -366,12 +366,11 @@ cf_s<-c(Reduce("+",re_40_p_l[[4]])[3]/iter,Reduce("+",re_120_p_l[[4]])[3]/iter
 df<-data.frame(c('40','120','480','1200','4800'),
                percent(dgp_p,accuracy = 0.01),percent(dj_p,accuracy = 0.01)
                ,percent(qr_p,accuracy = 0.01),percent(cf_p,accuracy = 0.01)
-               ,percent(dgp_s,accuracy = 0.01),percent(dj_s,accuracy = 0.01)
-               ,percent(qr_s,accuracy = 0.01),percent(cf_s,accuracy = 0.01))
+               ,round(dgp_s,3),round(dj_s,3),round(qr_s,3),round(cf_s,3))
 colnames(df)<-c('Data size','DGP','disjoint','quantile','proposed','DGP','disjoint','quantile','proposed')
 kable(df,'latex', booktabs = T,caption = 'Size effect (q=50%)',align = 'c') %>% 
         add_header_above(c(" ", "Percentage profit loss" = 4, "Average service level" = 4),bold = T) %>%
-        kable_styling(latex_options = c("striped", "scale_down"))
+        kable_styling(latex_options = "scale_down")
 ```
 
 
