--- a/linear-norm-plot.tex
+++ b/linear-norm-plot.tex
@@ -188,9 +188,9 @@ Data size & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & p
 \cmidrule(l{3pt}r{3pt}){2-5} \cmidrule(l{3pt}r{3pt}){6-9}
 Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed\\
 \midrule
-\rowcolor{gray!6}  0.5 & 4.91\% & 5.35\% & 5.67\% & 5.51\% & 50.24\% & 44.29\% & 50.23\% & 50.50\%\\
-0.63 & 14.28\% & 15.25\% & 16.15\% & 15.62\% & 67.13\% & 58.64\% & 60.14\% & 60.90\%\\
-\rowcolor{gray!6}  0.3 & 5.10\% & 5.63\% & 6.08\% & 5.92\% & 24.66\% & 24.50\% & 32.62\% & 33.28\%\\
+\rowcolor{gray!6}  0.5 & 4.91\% & 5.35\% & 5.67\% & 5.51\% & 0.502 & 0.443 & 0.502 & 0.505\\
+0.63 & 14.28\% & 15.25\% & 16.15\% & 15.62\% & 0.671 & 0.586 & 0.601 & 0.609\\
+\rowcolor{gray!6}  0.3 & 5.10\% & 5.63\% & 6.08\% & 5.92\% & 0.247 & 0.245 & 0.326 & 0.333\\
 \bottomrule
 \end{tabular}}
 \end{table}
@@ -206,9 +206,9 @@ Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & q
 \cmidrule(l{3pt}r{3pt}){2-5} \cmidrule(l{3pt}r{3pt}){6-9}
 Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed\\
 \midrule
-\rowcolor{gray!6}  0.5 & 4.94\% & 5.05\% & 5.05\% & 5.04\% & 49.84\% & 49.21\% & 49.79\% & 49.78\%\\
-0.63 & 13.82\% & 14.15\% & 14.10\% & 14.04\% & 63.49\% & 62.63\% & 63.09\% & 62.92\%\\
-\rowcolor{gray!6}  0.3 & 5.13\% & 5.25\% & 5.25\% & 5.26\% & 29.05\% & 29.04\% & 29.69\% & 30.12\%\\
+\rowcolor{gray!6}  0.5 & 4.94\% & 5.05\% & 5.05\% & 5.04\% & 0.498 & 0.492 & 0.498 & 0.498\\
+0.63 & 13.82\% & 14.15\% & 14.10\% & 14.04\% & 0.635 & 0.626 & 0.631 & 0.629\\
+\rowcolor{gray!6}  0.3 & 5.13\% & 5.25\% & 5.25\% & 5.26\% & 0.291 & 0.290 & 0.297 & 0.301\\
 \bottomrule
 \end{tabular}}
 \end{table}
@@ -224,9 +224,9 @@ Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & q
 \cmidrule(l{3pt}r{3pt}){2-5} \cmidrule(l{3pt}r{3pt}){6-9}
 Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed\\
 \midrule
-\rowcolor{gray!6}  0.5 & 4.92\% & 4.92\% & 4.96\% & 4.96\% & 49.22\% & 49.21\% & 49.30\% & 49.40\%\\
-0.63 & 14.02\% & 14.04\% & 14.22\% & 14.20\% & 62.63\% & 62.60\% & 62.64\% & 62.42\%\\
-\rowcolor{gray!6}  0.3 & 5.18\% & 5.19\% & 5.25\% & 5.27\% & 29.75\% & 29.56\% & 29.90\% & 30.16\%\\
+\rowcolor{gray!6}  0.5 & 4.92\% & 4.92\% & 4.96\% & 4.96\% & 0.492 & 0.492 & 0.493 & 0.494\\
+0.63 & 14.02\% & 14.04\% & 14.22\% & 14.20\% & 0.626 & 0.626 & 0.626 & 0.624\\
+\rowcolor{gray!6}  0.3 & 5.18\% & 5.19\% & 5.25\% & 5.27\% & 0.298 & 0.296 & 0.299 & 0.302\\
 \bottomrule
 \end{tabular}}
 \end{table}
