--- a/main_file.tex
+++ b/main_file.tex
@@ -286,6 +286,11 @@ Moreover, we use the exact model and parameters from data generating process to 
     \item Fill Rate ($MFR=\frac{\min\{\hat{Q}_{s+1},y_{s+1}\}}{y_{s+1}}$).
 \end{enumerate}
 We expect to see the performance of both the proposed method and benchmark methods converge to this upper bound when data length increases, and we also investigate the differences of their performance when data is insufficient.
+
+The results are presented in tables and figures. In Figure \ref{fig:ppl0.5}, average percentage profit loss are calculated based on iterations. Particularly, this figure represents the average performance of methods regarding to percentage profit loss in the situation where the target service level $=0.5$. DGP denotes the exact ARIMA model from data generating process as out upper bound, DJ denotes the disjoint method, QR denotes the quantile regression method, and CF denotes our proposed method. We can see both the proposed method and the benchmark methods converge to the upper bound when data length grows. Besides, the performance of our proposed method and quantile regression is very similar. This is exactly what we expected base on the transformation property we proved in Section \ref{se:new}. Regarding the percentage profit loss, when the data size is small, the disjoint method performed slightly better than the quantile regression method than the proposed method. In Figure \ref{fig:sl0.5}, every points represent the proportion of iterations that the demand is satisfied (e.g. 0.5 means the demand are satisfied in 10,000 of the 20,000 iterations). We can see that the disjoint method performed poorly on the service level when data size is small.
+
+More details about the size effect can be seen in Table \ref{tab:size_effect0.5}.
+
 \begin{figure}[h]
 \centering
 \includegraphics{ppl0.5-1.pdf}
@@ -293,7 +298,6 @@ We expect to see the performance of both the proposed method and benchmark metho
 \label{fig:ppl0.5}
 \end{figure}
 
-The results are presented in tables and figures. In Figure \ref{fig:ppl0.5}, DGP denotes the exact ARIMA model from data generating process as out upper bound, DJ denotes the disjoint method, QR denotes the quantile regression method, and CF denotes our proposed method. This figure represents the performance of methods regarding to percentage profit loss in the situation where the target service level $=0.5$. We can see both the proposed method and the benchmark methods converge to the upper bound when data length grows. Besides, the performance of our proposed method and quantile regression is very similar. This is exactly what we expected base on the transformation property we proved in Section \ref{se:new}. Besides, when the data size is small, the disjoint method can capture the structure faster than quantile regression method, which is also slightly faster than the proposed method. In figure \ref{fig:sl0.5}, however, the disjoint method performed poorly when the data size is small. More details about the size effect can be seen in Table \ref{size_effect0.5}.
 \begin{figure}[h]
 \centering
 \includegraphics{sl-1.pdf}
@@ -303,7 +307,7 @@ The results are presented in tables and figures. In Figure \ref{fig:ppl0.5}, DGP
 
 \begin{table}[h]
 \caption{Size effect on percentage profit loss and service level at 0.5 target service level}
-\label{size_effect0.5}
+\label{tab:size_effect0.5}
 \centering \resizebox{\linewidth}{!}{
 \begin{tabular}[t]{ccccccccc}
 \toprule
@@ -320,10 +324,11 @@ Data size & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & p
 \end{tabular}} 
 \end{table}
 
-We can also compare the methods' performance regarding to different target service levels while fix the data size. 
-\begin{table}
+On the other hand, we can also compare the methods' performance regarding to different target service levels while fix the data size in Table \ref{tab:level_effect40} and \ref{tab:level_effect4800}. When data size is big enough, as in Table \ref{tab:level_effect4800}, different target service level doesn't make too much effect on the performance of methods. However, it is worth noticing that when the data size is small, in Table \ref{tab:level_effect40}, the disjoint method performed very differently from other methods. 
 
-\caption{\label{tab:level40}Target service level effect (n=40)}
+\begin{table}[h]
+\caption{Target service level effect on percentage profit loss and service level at 40 data size}
+\label{tab:level_effect40}
 \centering
 \resizebox{\linewidth}{!}{
 \begin{tabular}[t]{ccccccccc}
@@ -332,16 +337,16 @@ We can also compare the methods' performance regarding to different target servi
 \cmidrule(l{3pt}r{3pt}){2-5} \cmidrule(l{3pt}r{3pt}){6-9}
 Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed\\
 \midrule
-\rowcolor{gray!6}  0.5 & 4.91\% & 5.35\% & 5.67\% & 5.51\% & 0.502 & 0.443 & 0.502 & 0.505\\
+0.5 & 4.91\% & 5.35\% & 5.67\% & 5.51\% & 0.502 & 0.443 & 0.502 & 0.505\\
 0.63 & 14.28\% & 15.25\% & 16.15\% & 15.62\% & 0.671 & 0.586 & 0.601 & 0.609\\
-\rowcolor{gray!6}  0.3 & 5.10\% & 5.63\% & 6.08\% & 5.92\% & 0.247 & 0.245 & 0.326 & 0.333\\
+0.3 & 5.10\% & 5.63\% & 6.08\% & 5.92\% & 0.247 & 0.245 & 0.326 & 0.333\\
 \bottomrule
 \end{tabular}}
 \end{table}
 
-\begin{table}
-
-\caption{\label{tab:level480}Target service level effect (n=480)}
+\begin{table}[h]
+\caption{Target service level effect on percentage profit loss and service level at 4800 data size}
+\label{tab:level_effect4800}
 \centering
 \resizebox{\linewidth}{!}{
 \begin{tabular}[t]{ccccccccc}
@@ -350,27 +355,9 @@ Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & q
 \cmidrule(l{3pt}r{3pt}){2-5} \cmidrule(l{3pt}r{3pt}){6-9}
 Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed\\
 \midrule
-\rowcolor{gray!6}  0.5 & 4.94\% & 5.05\% & 5.05\% & 5.04\% & 0.498 & 0.492 & 0.498 & 0.498\\
-0.63 & 13.82\% & 14.15\% & 14.10\% & 14.04\% & 0.635 & 0.626 & 0.631 & 0.629\\
-\rowcolor{gray!6}  0.3 & 5.13\% & 5.25\% & 5.25\% & 5.26\% & 0.291 & 0.290 & 0.297 & 0.301\\
-\bottomrule
-\end{tabular}}
-\end{table}
-
-\begin{table}
-
-\caption{\label{tab:level4800}Target service level effect (n=4800)}
-\centering
-\resizebox{\linewidth}{!}{
-\begin{tabular}[t]{ccccccccc}
-\toprule
-\multicolumn{1}{c}{\textbf{ }} & \multicolumn{4}{c}{\textbf{Percentage profit loss}} & \multicolumn{4}{c}{\textbf{Average service level}} \\
-\cmidrule(l{3pt}r{3pt}){2-5} \cmidrule(l{3pt}r{3pt}){6-9}
-Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed\\
-\midrule
-\rowcolor{gray!6}  0.5 & 4.92\% & 4.92\% & 4.96\% & 4.96\% & 0.492 & 0.492 & 0.493 & 0.494\\
+0.5 & 4.92\% & 4.92\% & 4.96\% & 4.96\% & 0.492 & 0.492 & 0.493 & 0.494\\
 0.63 & 14.02\% & 14.04\% & 14.22\% & 14.20\% & 0.626 & 0.626 & 0.626 & 0.624\\
-\rowcolor{gray!6}  0.3 & 5.18\% & 5.19\% & 5.25\% & 5.27\% & 0.298 & 0.296 & 0.299 & 0.302\\
+0.3 & 5.18\% & 5.19\% & 5.25\% & 5.27\% & 0.298 & 0.296 & 0.299 & 0.302\\
 \bottomrule
 \end{tabular}}
 \end{table}
