Updates from Overleaf

--- a/main_file.tex
+++ b/main_file.tex
@@ -287,22 +287,22 @@ Moreover, we use the exact model and parameters from data generating process to 
 \end{enumerate}
 We expect to see the performance of both the proposed method and benchmark methods converge to this upper bound when data length increases, and we also investigate the differences of their performance when data is insufficient.
 
-The results are presented in tables and figures. In Figure \ref{fig:ppl0.5}, average percentage profit loss are calculated based on iterations. Particularly, this figure represents the average performance of methods regarding to percentage profit loss in the situation where the target service level $=0.5$. DGP denotes the exact ARIMA model from data generating process as out upper bound, DJ denotes the disjoint method, QR denotes the quantile regression method, and CF denotes our proposed method. We can see both the proposed method and the benchmark methods converge to the upper bound when data length grows. Besides, the performance of our proposed method and quantile regression is very similar. This is exactly what we expected base on the transformation property we proved in Section \ref{se:new}. Regarding the percentage profit loss, when the data size is small, the disjoint method performed slightly better than the quantile regression method than the proposed method. In Figure \ref{fig:sl0.5}, every points represent the proportion of iterations that the demand is satisfied (e.g. 0.5 means the demand are satisfied in 10,000 of the 20,000 iterations). We can see that the disjoint method performed poorly on the service level when data size is small.
+The results are presented in tables and figures. In Figure \ref{fig:ppl0.3}, average percentage profit loss are calculated based on iterations. Particularly, this figure represents the average performance of methods regarding to percentage profit loss in the situation where the target service level $=0.3$. DGP denotes the exact ARIMA model from data generating process as out upper bound, DJ denotes the disjoint method, QR denotes the quantile regression method, and CF denotes our proposed method. We can see both the proposed method and the benchmark methods converge to the upper bound when data length grows. Besides, the performance of our proposed method and quantile regression is very similar. This is exactly what we expected base on the transformation property we proved in Section \ref{se:new}. Regarding the percentage profit loss, when the data size is small, the disjoint method performed slightly better than the quantile regression method than the proposed method. In Figure \ref{fig:sl0.3}, every points represent the proportion of iterations that the demand is satisfied (e.g. 0.5 means the demand are satisfied in 10,000 of the 20,000 iterations). We can see that both the three methods and the DGP converge to the target service level 0.3 when data length grows. Yet, the disjoint method approaches the target service level from lower side while the proposed method and the quantile regression approach it from upper side. This phenomenon could be explained by the different mechanisms of the disjoint method and integrated method. 
 
 More details about the size effect can be seen in Table \ref{tab:size_effect0.5}.
 
 \begin{figure}[h]
 \centering
-\includegraphics{ppl0.5-1.pdf}
-\caption{Percentage profit loss vs. data size at 0.5 target service level}
-\label{fig:ppl0.5}
+\includegraphics{linear-norm-plot_files/figure-latex/ppl0.3-1.pdf}
+\caption{Percentage profit loss vs. data size at 0.3 target service level}
+\label{fig:ppl0.3}
 \end{figure}
 
 \begin{figure}[h]
 \centering
-\includegraphics{sl-1.pdf}
-\caption{Service level vs. data size at 0.5 target service level}
-\label{fig:sl0.5}
+\includegraphics{linear-norm-plot_files/figure-latex/sl-3.pdf}
+\caption{Service level vs. data size at 0.3 target service level}
+\label{fig:sl0.3}
 \end{figure}
 
 \begin{table}[h]
