--- a/linear norm plot.Rmd
+++ b/linear norm plot.Rmd
@@ -257,6 +257,7 @@ colnames(mac)<-c("DGP", "DJ","QR","CF")
 par(omd=c(0, 1-w, 0, 1))
 matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",xlab = 'data length'
         ,ylab = 'service level')
+abline(h=0.3,lty=2,col='black')
 axis(1, at=1:5, labels=x_axis)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
        ,c("DGP", "DJ","QR","CF"), pch=1:4,col=1:4)
